# datasus-ai-prediction

./: .gitignore  README.md  app.py  app_backup.py  pyproject.toml  requirements.txt  vercel.json
.claude/: launch.json
.claude/agents/: datasus-pipeline.md
.claude/skills/datasus-avaliacao/: SKILL.md
.claude/skills/datasus-download/: SKILL.md
.claude/skills/datasus-features/: SKILL.md
.claude/skills/datasus-novo-desfecho/: SKILL.md
.claude/skills/datasus-pipeline/: SKILL.md
.claude/skills/datasus-variaveis/: SKILL.md
.streamlit/: config.toml
core/data/: downloader.py  linker.py  sih.py  sim.py  sinan.py  sinan_aids.py  sinan_chik.py  sinan_deng.py  sinan_hans.py  sinan_iexo.py  sinan_sifa.py  sinan_viol.py  sinasc.py
core/features/: data_dict.py
core/models/: evaluation.py  pipeline.py
core/outcomes/: __init__.py  mortalidade_hospitalar.py  prematuridade.py  readmissao_30d.py
pages/: 0_Analise.py  1_Desfecho.py  2_Dados.py  _1_Desfecho.py  _3_Cohort.py  _4_Modelo.py  _5_Resultados.py  analise.py  calibracao.py  deploy.py  diy.py  relatorio.py  upload.py
